--- a/00-Intro-GIT-HTML-CSS/03. HTML/style.css
+++ b/00-Intro-GIT-HTML-CSS/03. HTML/style.css
@@ -1,5 +1,5 @@
 body{
-    color: coral;
+    color: rgb(15, 4, 75);
 }
     .center
 {
@@ -8,7 +8,7 @@ body{
 }
 
 h1{
-    color: cadetblue;
+    color: rgb(216, 113, 139);
 }
 
 img{
@@ -17,9 +17,9 @@ img{
 #thirdDiv{
     height: 600px;
     width: 500px;
-    background-color: cyan;
+    background-image: url(https://www.nomadbubbles.com/wp-content/uploads/santorini-isla-grecia.jpg);
     padding: 50px;
-    border: 10px solid chocolate;
+    border: 10px solid cadetblue;
 }
 #spanId{
     font-size: 18px;
